--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:login:chrome": "npx playwright test src/tests/login.spec.ts --headed --project=chromium --reporter=html",
     "allure:generate": "npx allure generate ./allure-results --clean -o ./allure-report",
     "allure:open": "npx allure open ./allure-report",
-    "allure:login:report":"npx playwright test src/tests/login.spec.ts --reporter=allure-playwright"
+    "allure:login:report": "npx playwright test src/tests/login.spec.ts --reporter=allure-playwright"
   },
   "keywords": [],
   "author": "",
@@ -25,5 +25,8 @@
     "allure-playwright": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.21.1"
   }
 }
